-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2, 6.6.0 RC
-
-
194b1b22d (dev), ac55a1c16 (6.6), f63286ea8 (6.5)
When a QMediaPlayer object is created, the audio device is immediately captured even though playback has not started. This leads to the fact that the Windows system cannot go into sleep mode using a timer (i.e., in the system settings it is specified to go into sleep mode after, for example, 2 minutes of inactivity).
To check whether an audio device is in use in Windows, you can use the command (in the terminal):
powercfg /requests
Here is an example of the output when the device is in use:
powercfg /requests DISPLAY: None.SYSTEM: [DRIVER] USB Audio Device (USB\VID_09DA&PID_2701&MI_00\9&2ac84e6b&0&0000) An audio stream is currently in use.AWAYMODE: None.EXECUTION: None.PERFBOOST: None.ACTIVELOCKSCREEN: None.
There is no this problem on version Qt6.3.2
I am attaching a minimal project to reproduce the problem:
QtWindowsAudioDeviceCaptureBugTest.zip![]()
- is duplicated by
-
QTBUG-118755 QMediaPlayer and QSoundEffect block PC from sleep
-
- Closed
-
- relates to
-
QTBUG-112512 QSoundEffect cuts out on very short sounds ( ~ 0.2 - 0.3 seconds )
-
- Closed
-
-
QTBUG-117612 [REG 6.3.2->6.5.2] Windows 10: CPU core stucks at minimum friequency
-
- Closed
-